--- a/WishList/Views/Item/Index.cshtml
+++ b/WishList/Views/Item/Index.cshtml
@@ -5,8 +5,8 @@
 <a asp-action="create">Add Item</a>
 
 <ul>
-        @foreach(var item in Model)
+        @foreach(var Item in Model)
         {
-            <li>@item.Description <a asp-action="delete" asp-route-id="@item.Id">Delete</a></li>
+            <li>@Item.Description <a asp-action="delete" asp-route-id="@Item.Id">Delete</a></li>
         }
 </ul>
